--- a/task2.html
+++ b/task2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/task2.css">
 </head>
 <body>
     <div id = "navbar">
