--- a/task-1/task1.html
+++ b/task-1/task1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>betasquirrel</title>
+        <title>task 1</title>
         <link rel="stylesheet" href="css/task1.css">
     </head>
     <body>
     <div id="navbar">
         <div class="left">
-            <img src="css/images.png" width="50px">
+            <img src="../images/images.png" width="50px">
             <h2>Apple</h2>
         </div>
         <div class="right">
