--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="card-text">
             Webpage with a navigation bar, a main container and 3 boxes. Made to illustrate the use of flexbox.
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="https://haridinesh00.github.io/betasquirrel/task-1/task1.html" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <div class="card" style="width: 18rem">
@@ -31,7 +31,7 @@
           <p class="card-text">
             Webpage with a navigation bar, a top container with two boxes and a bottom container. 
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="https://haridinesh00.github.io/betasquirrel/task-2/task2.html" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
@@ -42,7 +42,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="https://haridinesh00.github.io/betasquirrel/task-4/task4.html" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     <script
