--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1>Betasquirrel Tasks</h1>
+    <div id = "cards">
     <div class="card" style="width: 18rem">
       <img src="task-1/task1.JPG" class="card-img-top" alt="..." />
       <div class="card-body">
@@ -39,12 +43,12 @@
         <div class="card-body">
           <h5 class="card-title">Task 4</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            A webpage of an admin dashboard with a navigation bar, a top container with two boxes and a bottom container.
           </p>
           <a href="https://haridinesh00.github.io/betasquirrel/task-4/task4.html" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
