--- a/task-2/task2.html
+++ b/task-2/task2.html
@@ -7,7 +7,7 @@
 <body>
     <div id = "navbar">
         <div class = "left">
-            <img src="images/logo-removebg-preview.png" alt="logo">
+            <img src="../images/beta.png" alt="logo">
             <h2>Orange</h2>
         </div>
         <div class = "right">
