--- a/task-4/task4.html
+++ b/task-4/task4.html
@@ -11,7 +11,7 @@
         <h2>Figma</h2>
       </div>
       <div class="right">
-        <img src="images/profile.jpg" alt="profile" style="border-radius: 50%;">
+        <img src="../images/profile.jpg" alt="profile" style="border-radius: 50%;">
       </div>
     </div>
     <div id = "style-bar">
