--- a/task-4/task4.html
+++ b/task-4/task4.html
@@ -7,7 +7,7 @@
   <body>
     <div id="navbar">
       <div class="left">
-        <img src="images/figma.png" alt="logo" />
+        <img src="../images/figma.png" alt="logo" />
         <h2>Figma</h2>
       </div>
       <div class="right">
