--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
     <h1>Betasquirrel Tasks</h1>
     <div id = "cards">
     <div class="card" style="width: 18rem">
-      <img src="task-1/task1.JPG" class="card-img-top" alt="..." />
+      <img src="task-1/images/task1.JPG" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">Task 1</h5>
         <p class="card-text">
             Webpage with a navigation bar, a main container and 3 boxes. Made to illustrate the use of flexbox.
         </p>
-        <a href="https://haridinesh00.github.io/betasquirrel/task-1/task1.html" class="btn btn-primary">Go somewhere</a>
+        <a href="https://haridinesh00.github.io/betasquirrel/task-1/index.html" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <div class="card" style="width: 18rem">
-        <img src="task-2/task2.JPG" class="card-img-top" alt="..." />
+        <img src="task-2/images/task2.JPG" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Task 2</h5>
           <p class="card-text">
             Webpage with a navigation bar, a top container with two boxes and a bottom container. 
           </p>
-          <a href="https://haridinesh00.github.io/betasquirrel/task-2/task2.html" class="btn btn-primary">Go somewhere</a>
+          <a href="https://haridinesh00.github.io/betasquirrel/task-2/index.html" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img src="task-4/task4.jpg" class="card-img-top" alt="..." />
+        <img src="task-4/images/task4.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Task 4</h5>
           <p class="card-text">
             A webpage of an admin dashboard with a navigation bar, a top container with two boxes and a bottom container.
           </p>
-          <a href="https://haridinesh00.github.io/betasquirrel/task-4/task4.html" class="btn btn-primary">Go somewhere</a>
+          <a href="https://haridinesh00.github.io/betasquirrel/task-4/index.html" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
