--- a/task-1/index.html
+++ b/task-1/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <title>task 1</title>
-        <link rel="stylesheet" href="css/task1.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
     <div id="navbar">
         <div class="left">
-            <img src="../images/images.png" width="50px">
+            <img src="images/images.png" width="50px">
             <h2>Apple</h2>
         </div>
         <div class="right">
