--- a/task-2/index.html
+++ b/task-2/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Home</title>
-    <link rel="stylesheet" href="css/task2.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id = "navbar">
         <div class = "left">
-            <img src="../images/beta.png" alt="logo">
+            <img src="images/beta.png" alt="logo">
             <h2>Orange</h2>
         </div>
         <div class = "right">
