--- a/task-4/index.html
+++ b/task-4/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>Task 4</title>
-    <link rel="stylesheet" href="css/task4.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="navbar">
       <div class="left">
-        <img src="../images/figma.png" alt="logo" />
+        <img src="images/figma.png" alt="logo" />
         <h2>Figma</h2>
       </div>
       <div class="right">
-        <img src="../images/profile.jpg" alt="profile" style="border-radius: 50%;">
+        <img src="images/profile.jpg" alt="profile" style="border-radius: 50%;">
       </div>
     </div>
     <div id = "style-bar">
