--- a/index.html
+++ b/index.html
@@ -11,31 +11,43 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
-    <link rel="stylesheet" href="css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Tangerine"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Betasquirrel Tasks</h1>
-    <div id = "cards">
-    <div class="card" style="width: 18rem">
-      <img src="task-1/images/task1.JPG" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Task 1</h5>
-        <p class="card-text">
-            Webpage with a navigation bar, a main container and 3 boxes. Made to illustrate the use of flexbox.
-        </p>
-        <a href="https://haridinesh00.github.io/betasquirrel/task-1/index.html" class="btn btn-primary">Go somewhere</a>
+    <div id="cards">
+      <div class="card" style="width: 18rem">
+        <img src="task-1/images/task1.JPG" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Task 1</h5>
+          <p class="card-text">
+            Webpage with a navigation bar, a main container and 3 boxes. Made to
+            illustrate the use of flexbox.
+          </p>
+          <a
+            href="https://haridinesh00.github.io/betasquirrel/task-1/index.html"
+            class="btn btn-primary"
+            >Go somewhere</a
+          >
+        </div>
       </div>
-    </div>
-    <div class="card" style="width: 18rem">
+      <div class="card" style="width: 18rem">
         <img src="task-2/images/task2.JPG" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Task 2</h5>
           <p class="card-text">
-            Webpage with a navigation bar, a top container with two boxes and a bottom container. 
+            Webpage with a navigation bar, a top container with two boxes and a
+            bottom container.
           </p>
-          <a href="https://haridinesh00.github.io/betasquirrel/task-2/index.html" class="btn btn-primary">Go somewhere</a>
+          <a
+            href="https://haridinesh00.github.io/betasquirrel/task-2/index.html"
+            class="btn btn-primary"
+            >Go somewhere</a
+          >
         </div>
       </div>
       <div class="card" style="width: 18rem">
@@ -43,9 +55,14 @@
         <div class="card-body">
           <h5 class="card-title">Task 4</h5>
           <p class="card-text">
-            A webpage of an admin dashboard with a navigation bar, a top container with two boxes and a bottom container.
+            A webpage of an admin dashboard with a navigation bar, a top
+            container with two boxes and a bottom container.
           </p>
-          <a href="https://haridinesh00.github.io/betasquirrel/task-4/index.html" class="btn btn-primary">Go somewhere</a>
+          <a
+            href="https://haridinesh00.github.io/betasquirrel/task-4/index.html"
+            class="btn btn-primary"
+            >Go somewhere</a
+          >
         </div>
       </div>
     </div>
