--- a/task-2/index.html
+++ b/task-2/index.html
@@ -38,6 +38,9 @@
         </p>
       </div>
     </div>
-    <div id="bottom-container"></div>
+    <div id="bottom-container">
+      <div id="bottom-inside">
+      </div>
+    </div>
   </body>
 </html>
