--- a/task-1/index.html
+++ b/task-1/index.html
@@ -19,10 +19,7 @@
       </div>
     </div>
     <div id="main-container">
-      <h3>
-        hic dicta quas ducimus consequatur officia maiores cupiditate sit
-        aliquam provident?
-      </h3>
+      <h1>Hic dicta quas ducimus consequatur</h1>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores
         reiciendis veritatis molestiae omnis! Aliquid laboriosam nesciunt saepe.
@@ -41,8 +38,7 @@
     </div>
     <div class="boxes m-r m-l">
       <h3>
-        Veritatis voluptate delectus ipsa ipsam ducimus enim numquam ut,
-        necessitatibus provident quos aperiam.
+        Veritatis voluptate delectus ipsa ipsam.
       </h3>
       <p>
         riosam temporibus consectetur error provident impedit unde animi
@@ -56,8 +52,7 @@
     </div>
     <div class="boxes m-r">
       <h3>
-        harum facilis excepturi cum sint pariatur nihil molestiae, distinctio
-        ratione dolorum possimus quos nisi?
+        Harum facilis excepturi cum sint pariatur.
       </h3>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
@@ -71,8 +66,7 @@
     </div>
     <div class="boxes third">
       <h3>
-        asperiores accusantium nihil facere cupiditate distinctio. Voluptatum
-        provident facilis delectus quisquam.
+        Asperiores accusantium nihil facere cupiditate.
       </h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
