--- a/task-2/index.html
+++ b/task-2/index.html
@@ -20,6 +20,7 @@
     </div>
     <div id="top-container">
       <div id="box1">
+        <div class="content-1">
         <h2>Heading one</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, atque
@@ -28,14 +29,17 @@
           voluptatibus facere magni.
         </p>
       </div>
+      </div>
       <div id="box2">
-        <h2>Heading two</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, atque
-          assumenda animi velit distinctio ea magni. Molestiae ab officia
-          facilis, temporibus repudiandae saepe quaerat amet explicabo tempora
-          voluptatibus facere magni.
-        </p>
+        <div class="content-2">
+          <h2>Heading two</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, atque
+            assumenda animi velit distinctio ea magni. Molestiae ab officia
+            facilis, temporibus repudiandae saepe quaerat amet explicabo tempora
+            voluptatibus facere magni.
+          </p>
+        </div>
       </div>
     </div>
     <div id="bottom-container">
