--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Betasquirrel Tasks</h1>
     <div id="cards">
       <div class="card" style="width: 18rem">
-        <img src="task-1/images/task-1.JPG" class="card-img-top" alt="..." />
+        <img src="task-1/images/task-1.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Task 1</h5>
           <p class="card-text">
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img src="task-2/images/task-2.JPG" class="card-img-top" alt="..." />
+        <img src="task-2/images/task-2.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Task 2</h5>
           <p class="card-text">
