--- a/task-1/index.html
+++ b/task-1/index.html
@@ -36,7 +36,7 @@
         mollitia ratione omnis.
       </p>
     </div>
-    <div class="boxes m-r m-l">
+    <div class="boxes m-r m-l first">
       <h3>
         Veritatis voluptate delectus ipsa ipsam.
       </h3>
@@ -50,7 +50,7 @@
         labore nam omnis vel sed. Ea ipsum provident animi deserunt architecto.
       </p>
     </div>
-    <div class="boxes m-r">
+    <div class="boxes m-r second">
       <h3>
         Harum facilis excepturi cum sint pariatur.
       </h3>
