--- a/task-2/index.html
+++ b/task-2/index.html
@@ -14,7 +14,7 @@
         <nav>
           <a href="home.html">Home</a>
           <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="contact.html">Contact Us</a>
         </nav>
       </div>
     </div>
