--- a/task-1/index.html
+++ b/task-1/index.html
@@ -37,9 +37,7 @@
       </p>
     </div>
     <div class="boxes m-r m-l first">
-      <h2>
-        Veritatis voluptate delectus ipsa ipsam.
-      </h2>
+      <h2>Veritatis voluptate delectus ipsa ipsam.</h2>
       <p>
         riosam temporibus consectetur error provident impedit unde animi
         voluptates molestiae similique, labore minus quas a facere atque sit?
@@ -51,9 +49,7 @@
       </p>
     </div>
     <div class="boxes m-r second">
-      <h2>
-        Harum facilis excepturi cum sint pariatur.
-      </h2>
+      <h2>Harum facilis excepturi cum sint pariatur.</h2>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
         accusantium dolorem nemo autem, enim dolor incidunt exercitationem sed
@@ -65,9 +61,7 @@
       </p>
     </div>
     <div class="boxes third">
-      <h2>
-        Asperiores accusantium nihil facere cupiditate.
-      </h2>
+      <h2>Asperiores accusantium nihil facere cupiditate.</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
         praesentium et molestias, a iure obcaecati quidem! Fuga, facere
