--- a/task-2/index.html
+++ b/task-2/index.html
@@ -21,14 +21,14 @@
     <div id="top-container">
       <div id="box1">
         <div class="content-1">
-        <h2>Heading one</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, atque
-          assumenda animi velit distinctio ea magni. Molestiae ab officia
-          facilis, temporibus repudiandae saepe quaerat amet explicabo tempora
-          voluptatibus facere magni.
-        </p>
-      </div>
+          <h2>Heading one</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, atque
+            assumenda animi velit distinctio ea magni. Molestiae ab officia
+            facilis, temporibus repudiandae saepe quaerat amet explicabo tempora
+            voluptatibus facere magni.
+          </p>
+        </div>
       </div>
       <div id="box2">
         <div class="content-2">
@@ -43,8 +43,7 @@
       </div>
     </div>
     <div id="bottom-container">
-      <div id="bottom-inside">
-      </div>
+      <div id="bottom-inside"></div>
     </div>
   </body>
 </html>
