--- a/task-6/register.html
+++ b/task-6/register.html
@@ -42,11 +42,19 @@
                 placeholder="Enter your first name"
               />
               <label for="Last Name" class="mob-only">Last name * :</label>
-              <input type="text" class="mob-only" placeholder="Enter your last name" />
+              <input
+                type="text"
+                class="mob-only"
+                placeholder="Enter your last name"
+              />
               <label for="">Mobile * :</label>
               <input type="tel" placeholder="Enter your mobile number" />
               <label for="" class="mob-only">Email * :</label>
-              <input type="text" class="mob-only" placeholder="Enter your email" />
+              <input
+                type="text"
+                class="mob-only"
+                placeholder="Enter your email"
+              />
               <label for="">Branch * :</label>
               <select name="" id="">
                 <option value="" disabled selected hidden>
@@ -56,7 +64,9 @@
                 <option value="">Civil Engineering</option>
                 <option value="">Mechanical Engineering</option>
               </select>
-              <label for="Hostel Facility" class="mob-only">Do You Need Hostel Facility:</label>
+              <label for="Hostel Facility" class="mob-only"
+                >Do You Need Hostel Facility:</label
+              >
               <div class="hostel-radio" id="mob-only">
                 <div class="left-radio">
                   <input type="radio" name="hostel" id="yes" />
@@ -68,7 +78,7 @@
                 </div>
               </div>
               <label for="additional sub" id="ad_label"
-                  >Choose Additional Subjects :
+                >Choose Additional Subjects :
               </label>
               <div class="check">
                 <input type="checkbox" name="ad_sub" id="ch1" />
@@ -81,11 +91,24 @@
                 <label for="">IoT</label>
                 <input type="checkbox" name="ad_sub" id="" />
                 <label for="">Robotics</label>
-            </div>
-            <div class="address">
-              <label for="">Permanent Address * :</label>
-              <textarea name="" id="" cols="80" rows="10" placeholder="Enter your full address"></textarea>
-            </div>
+              </div>
+              <div class="address">
+                <label for="">Permanent Address * :</label>
+                <textarea
+                  name=""
+                  id=""
+                  cols="80"
+                  rows="10"
+                  placeholder="Enter your full address"
+                ></textarea>
+              </div>
+              <div class="btn-main">
+                <div class="buttons">
+                  <button type="reset" id="clr">CLEAR</button>
+                  <button type="submit" id="sub">SUBMIT</button>
+                </div>
+              </div>
+              
             </div>
             <div class="right-main">
               <label for="Last Name">Last name * :</label>
@@ -103,10 +126,6 @@
                   <label for="no">No</label>
                 </div>
               </div>
-            </div>
-            <div class="buttons">
-              <button type="reset" id="clr">CLEAR</button>
-              <button type="submit" id="sub">SUBMIT</button>
             </div>
           </div>
         </form>
