index page updated

--- a/task-6/index.html
+++ b/task-6/index.html
@@ -34,7 +34,7 @@
           <h3>STUDENTS</h3>
         </div>
         <div class="right-main">
-          <a href="">Add Student</a>
+          <a href="register.html">Add Student</a>
         </div>
         <div class="table-div">
           <table>
