--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
           >
         </div>
       </div>
+      <div class="card" style="width: 18rem">
+        <img src="task-6/images/task-6.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Task 8</h5>
+          <p class="card-text">
+            Simple calculator using js.
+          </p>
+          <a
+            href="https://haridinesh00.github.io/betasquirrel/task-8/index.html"
+            class="btn btn-primary"
+            >Go somewhere</a
+          >
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
