--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasks</title>
+    <link rel="icon" href="https://img.icons8.com/nolan/96/list.png" type="image/png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -80,7 +81,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img src="task-6/images/task-6.jpg" class="card-img-top" alt="..." />
+        <img src="task-8/images/task-8.png" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Task 8</h5>
           <p class="card-text">
