--- a/task-8/index.html
+++ b/task-8/index.html
@@ -11,7 +11,7 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <h1>Simple Calculator</h1>
+    <h1><img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/64/null/external-calculator-banking-and-finance-kiranshastry-lineal-color-kiranshastry.png"/> Simple Calculator</h1>
     <div class="container" id="main">
         <div class="row">
             <div class="col">
