--- a/task-8/index.html
+++ b/task-8/index.html
@@ -7,6 +7,7 @@
     <title>Calculator</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/null/calculator--v1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
@@ -16,7 +17,7 @@
         <div class="row">
             <div class="col">
                 <form action="">
-                    <input type="text" class="form-control" id="inp_field"></input>
+                    <input type="text" class="form-control" id="inp_field" disabled></input>
                 </form>
             </div>
         </div>
@@ -33,7 +34,7 @@
                         <button onclick="document.getElementById('inp_field').value += '9'" class="btn btn-primary">9</button>
                     </div>
                     <div class="col-3">
-                        <button onclick="plus()" class="btn btn-primary">+</button>
+                        <button onclick="plus()" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="row">
@@ -47,12 +48,12 @@
                         <button onclick="document.getElementById('inp_field').value += '6'" class="btn btn-primary">6</button>
                     </div>
                     <div class="col-3">
-                        <button onclick="minus()" class="btn btn-primary">-</button>
+                        <button onclick="minus()" class="btn btn-primary"><i class="fa-solid fa-minus"></i></button>
                     </div>
                 </div>
             </div>
             <div class="col-2">
-                <button onclick="clear_screen()" class="btn btn-primary">C</button>
+                <button onclick="clear_screen()" class="btn btn-primary"><i class="fa-sharp fa-solid fa-c"></i></button>
             </div>
         </div>
         <div class="row align-items-center" id="under">
@@ -68,7 +69,7 @@
                         <button onclick="document.getElementById('inp_field').value += '3'" class="btn btn-primary">3</button>
                     </div>
                     <div class="col-3">
-                        <button onclick="multiply()" class="btn btn-primary">x</button>
+                        <button onclick="multiply()" class="btn btn-primary"><i class="fa-solid fa-xmark"></i></button>
                     </div>
                 </div>
                 <div class="row">
@@ -79,15 +80,15 @@
                         <button onclick="document.getElementById('inp_field').value += '.'" class="btn btn-primary">.</button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '%'" class="btn btn-primary">%</button>
+                        <button onclick="document.getElementById('inp_field').value += '%'" class="btn btn-primary"><i class="fa-solid fa-percent"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="divide()" class="btn btn-primary">&#247;</button>
+                        <button onclick="divide()" class="btn btn-primary"><i class="fa-solid fa-divide"></i></button>
                     </div>
                 </div>
             </div>
             <div class="col-2">
-                <button onclick="solution()" class="btn btn-primary">=</button>
+                <button onclick="solution()" class="btn btn-primary"><i class="fa-solid fa-equals"></i></button>
             </div>
         </div>
     </div>
