--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Tangerine"
+      href="https://fonts.Visitogleapis.com/css?family=Tangerine"
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -32,7 +32,7 @@
           <a
             href="https://haridinesh00.github.io/betasquirrel/task-1/index.html"
             class="btn btn-primary"
-            >Go</a
+            >Visit</a
           >
         </div>
       </div>
@@ -47,7 +47,7 @@
           <a
             href="https://haridinesh00.github.io/betasquirrel/task-2/index.html"
             class="btn btn-primary"
-            >Go</a
+            >Visit</a
           >
         </div>
       </div>
@@ -62,7 +62,7 @@
           <a
             href="https://haridinesh00.github.io/betasquirrel/task-4/index.html"
             class="btn btn-primary"
-            >Go</a
+            >Visit</a
           >
         </div>
       </div>
@@ -76,7 +76,7 @@
           <a
             href="https://haridinesh00.github.io/betasquirrel/task-6/index.html"
             class="btn btn-primary"
-            >Go</a
+            >Visit</a
           >
         </div>
       </div>
@@ -90,7 +90,7 @@
           <a
             href="https://haridinesh00.github.io/betasquirrel/task-8/index.html"
             class="btn btn-primary"
-            >Go</a
+            >Visit</a
           >
         </div>
       </div>
