--- a/task-8/index.html
+++ b/task-8/index.html
@@ -25,13 +25,13 @@
             <div class="col-10">
                 <div class="row" id="in_one">
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '7'" class="btn btn-primary">7</button>
+                        <button onclick="document.getElementById('inp_field').value += '7'" class="btn btn-primary"><i class="fa-solid fa-7"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '8'" class="btn btn-primary">8</button>
+                        <button onclick="document.getElementById('inp_field').value += '8'" class="btn btn-primary"><i class="fa-solid fa-8"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '9'" class="btn btn-primary">9</button>
+                        <button onclick="document.getElementById('inp_field').value += '9'" class="btn btn-primary"><i class="fa-solid fa-9"></i></button>
                     </div>
                     <div class="col-3">
                         <button onclick="plus()" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
@@ -39,13 +39,13 @@
                 </div>
                 <div class="row">
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '4'" class="btn btn-primary">4</button>
+                        <button onclick="document.getElementById('inp_field').value += '4'" class="btn btn-primary"><i class="fa-solid fa-4"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '5'" class="btn btn-primary">5</button>
+                        <button onclick="document.getElementById('inp_field').value += '5'" class="btn btn-primary"><i class="fa-solid fa-5"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '6'" class="btn btn-primary">6</button>
+                        <button onclick="document.getElementById('inp_field').value += '6'" class="btn btn-primary"><i class="fa-solid fa-6"></i></button>
                     </div>
                     <div class="col-3">
                         <button onclick="minus()" class="btn btn-primary"><i class="fa-solid fa-minus"></i></button>
@@ -60,13 +60,13 @@
             <div class="col-10">
                 <div class="row" id="in_two">
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '1'" class="btn btn-primary">1</button>
+                        <button onclick="document.getElementById('inp_field').value += '1'" class="btn btn-primary"><i class="fa-solid fa-1"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '2'" class="btn btn-primary">2</button>
+                        <button onclick="document.getElementById('inp_field').value += '2'" class="btn btn-primary"><i class="fa-solid fa-2"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '3'" class="btn btn-primary">3</button>
+                        <button onclick="document.getElementById('inp_field').value += '3'" class="btn btn-primary"><i class="fa-solid fa-3"></i></button>
                     </div>
                     <div class="col-3">
                         <button onclick="multiply()" class="btn btn-primary"><i class="fa-solid fa-xmark"></i></button>
@@ -74,10 +74,10 @@
                 </div>
                 <div class="row">
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '0'" class="btn btn-primary">0</button>
+                        <button onclick="document.getElementById('inp_field').value += '0'" class="btn btn-primary"><i class="fa-solid fa-0"></i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '.'" class="btn btn-primary">.</button>
+                        <button onclick="document.getElementById('inp_field').value += '.'" class="btn btn-primary"><i class="fa-solid">.</i></button>
                     </div>
                     <div class="col-3">
                         <button onclick="document.getElementById('inp_field').value += '%'" class="btn btn-primary"><i class="fa-solid fa-percent"></i></button>
