modulus operator and mobile device height fixed

--- a/task-8/index.html
+++ b/task-8/index.html
@@ -80,7 +80,7 @@
                         <button onclick="document.getElementById('inp_field').value += '.'" class="btn btn-primary"><i class="fa-solid">.</i></button>
                     </div>
                     <div class="col-3">
-                        <button onclick="document.getElementById('inp_field').value += '%'" class="btn btn-primary"><i class="fa-solid fa-percent"></i></button>
+                        <button onclick="modulus()" class="btn btn-primary"><i class="fa-solid fa-percent"></i></button>
                     </div>
                     <div class="col-3">
                         <button onclick="divide()" class="btn btn-primary"><i class="fa-solid fa-divide"></i></button>
