--- a/task-6/index.html
+++ b/task-6/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task-6</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -24,9 +25,9 @@
     <div class="main">
       <div class="sidebar">
         <nav>
-            <a href="#">STUDENTS</a>
-            <a href="#">STAFF</a>
-            <a href="#">EXAMS</a>
+            <a href="#"><i class="bi bi-house"></i> STUDENTS</a>
+            <a href="#"><i class="bi bi-person"></i> STAFF</a>
+            <a href="#"><i class="bi bi-book"></i> EXAMS</a>
         </nav>
       </div>
       <div class="main-content">
@@ -34,7 +35,7 @@
           <h3>STUDENTS</h3>
         </div>
         <div class="right-main">
-          <a href="register.html">Add Student</a>
+          <a href="register.html"><i class="bi bi-plus"></i>Add Student</a>
         </div>
         <div class="table-div">
           <table>
